--- a/awm/awm-service/pom.xml
+++ b/awm/awm-service/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>edu.zut.cs.sowtfare</groupId>
@@ -6,4 +8,11 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>awm-service</artifactId>
+  <dependencies>
+        <dependency>
+            <groupId>edu.zut.cs.sowtfare</groupId>
+            <artifactId>awm-dao</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
