--- a/awm/awm-web/pom.xml
+++ b/awm/awm-web/pom.xml
@@ -31,6 +31,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
             <artifactId>itext</artifactId>
             <version>2.1.7</version>
         </dependency>
+        
+        <dependency>
+	        <groupId>javax</groupId>
+	        <artifactId>javaee-api</artifactId>
+	        <version>7.0</version>
+	        <scope>provided</scope>
+		</dependency>
 	</dependencies>
 	 <build>
         <plugins>
